Fix case screenshots cropping on laptop by using contain fit

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -192,7 +192,8 @@ h3 {
 .case-image {
   position: relative;
   width: 100%;
-  height: 180px;
+  height: 220px;
+  background: var(--surface-2);
 }
 
 @media (min-width: 768px) {
@@ -213,6 +214,6 @@ h3 {
   }
 
   .case-image {
-    height: 240px;
+    height: 320px;
   }
 }
